# LocalWispr

./: .gitignore  CLAUDE.md  EDGE_CASE_ANALYSIS.md  INSTALLATION.md  README.md  RELEASE.md  TEST_REVIEW_FINDINGS.md  build-installer.bat  build.bat  config-test.toml  config.toml  localwispr.spec  main.py  package.json  pyproject.toml
.github/workflows/: release.yml
installer/: localwispr.iss
localwispr/: __init__.py  __main__.py  audio.py  cli_tests.py  config.py  context.py  feedback.py  gpu.py  hotkeys.py  notifications.py  output.py  overlay.py  pipeline.py  settings_controller.py  settings_manager.py  settings_model.py  settings_view.py  settings_window.py  streaming.py  transcribe.py  tray.py
localwispr/audio/: __init__.py  feedback.py  format.py  recorder.py  volume.py
localwispr/config/: __init__.py  cache.py  loader.py  migration.py  saver.py  types.py
localwispr/modes/: __init__.py  definitions.py  manager.py
localwispr/prompts/: __init__.py  chat.txt  coding.txt  email.txt  general.txt  planning.txt
localwispr/settings/: __init__.py  components.py  controller.py  manager.py  model.py  view.py  window.py  window_models.py  window_tabs.py
localwispr/transcribe/: __init__.py  context.py  device.py  download_progress.py  gpu.py  model_manager.py  streaming.py  transcriber.py
localwispr/ui/: __init__.py  first_run.py  notifications.py  overlay.py  tray.py
src/: main.ts
tests/: __init__.py  conftest.py  helpers.py  test_audio.py  test_config.py  test_context.py  test_feedback.py  test_hotkeys.py  test_modes.py  test_notifications.py  test_output.py  test_pipeline.py  test_settings_manager.py  test_streaming.py  test_transcribe.py
tests/e2e/: __init__.py  conftest.py  test_smoke.py
tests/gui/: __init__.py  test_settings_window.py  test_tray.py
tests/integration/: __init__.py  test_settings_integration.py  test_workflows.py
