[project]
name = "localwispr"
version = "0.1.0"
description = "Local speech-to-text using Whisper - privacy-first, no cloud APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.1",
    "pywhispercpp>=1.4.0",
    "pillow>=12.1.0",
    "pygetwindow>=0.0.9",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "pystray>=0.19.5",
    "scipy>=1.17.0",
    "sounddevice>=0.5.3",
    "winotify>=1.1.0",
    "pycaw>=20230407",
    "nvidia-cublas-cu12>=12.4",
]

[project.scripts]
localwispr = "localwispr.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests with minimal mocking",
    "gui: GUI tests that may require a display",
    "e2e: end-to-end smoke tests",
]
addopts = "--durations=10 --color=yes"

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "pywinauto>=0.6.8",
    "ruff>=0.14.13",
]
